* Added basic Manage Groups page * Added translate_plural Twig filter * Temporarily fixed the segfault with 0 posts. Further investigation needed to solve the problem. It seems to happen when either the tags or archive_list (possibly others) are empty. The Tags module has been getting away with it since it has {% if tags %} wrapped around it (it's meant as a "if the tags module is enabled" but it doubles as "if the tags context variable isn't empty", inadvertently), but when that check is removed it also fails.

--- a/admin/style.css
+++ b/admin/style.css
@@ -503,7 +503,17 @@ a.button img {
 }
 /* @end */
 
-/* @group Helpers */
+/* @group Helpers & General */
+.box {
+	background: #f5f5f5;
+	border: 1px solid #ddd;
+	padding: 1em;
+	margin: 0 0 1em;
+}
+.box h1 {
+	font-size: 1.25em !important;
+	margin: 0 !important;
+}
 a.emblem {
 	border: none;
 }
